--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,17 +4,10 @@ workflows:
     max_build_duration: 60
     instance_type: mac_mini
     platform: ios
+    trigger:
+      branches:
+        only:
+          - master
     ios:
       artifacts:
         - build/ios/ipa/Runner.ipa
-    scripts:
-      - flutter clean
-      - flutter pub get
-      - flutter build ios --release --no-codesign
-    dependencies:
-      pre:
-        - name: Install Flutter dependencies
-          run: flutter doctor
-    trigger:
-      branch:
-        - master
