--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,15 +2,19 @@ workflows:
   flutter-build:
     name: Flutter build workflow
     max_build_duration: 60
-    instance_type: mac_mini
-    trigger:
-      branches:
-        only:
-          - master
+    instance_type: mac_mini_m2
     environment:
-      vars:
-        FLUTTER_CHANNEL: stable
-    ios:
-      build:
-        ipa:
-          path: build/ios/ipa/Runner.ipa
+      flutter: stable
+      xcode: latest
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: 'master'
+          include: true
+    scripts:
+      - flutter clean
+      - flutter pub get
+      - flutter build ios --release --no-codesign
+    artifacts:
+      - build/ios/ipa/Runner.ipa
